--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@c4312/vscode-regexpp",
+  "name": "vscode-regexpp",
   "version": "3.1.0",
   "description": "Regular expression parser for ECMAScript.",
   "engines": {
@@ -36,7 +36,7 @@
     "build": "run-s build:*",
     "build:tsc": "tsc --module es2015",
     "build:rollup": "rollup -c",
-    "build:dts": "dts-bundle --name regexpp --main .temp/index.d.ts --out ../index.d.ts",
+    "build:dts": "dts-bundle --name vscode-regexpp --main .temp/index.d.ts --out ../index.d.ts",
     "clean": "rimraf .temp index.*",
     "codecov": "nyc report -r lcovonly && codecov -t ${CODECOV_TOKEN} --disable=gcov",
     "lint": "eslint scripts src test --ext .ts",
